--- a/sprawozdanie.ipynb
+++ b/sprawozdanie.ipynb
@@ -61,11 +61,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.3.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (1.16.2)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (3.10.6)\n",
+      "Requirement already satisfied: memory_profiler in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.61.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (80.9.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (4.60.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\student189\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (11.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\student189\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (3.2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\student189\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: psutil in c:\\users\\student189\\appdata\\roaming\\python\\python313\\site-packages (from memory_profiler) (7.1.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\student189\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'distutils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msp\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_line_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mload_ext\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmemory_profiler\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\interactiveshell.py:2504\u001b[39m, in \u001b[36mInteractiveShell.run_line_magic\u001b[39m\u001b[34m(self, magic_name, line, _stack_depth)\u001b[39m\n\u001b[32m   2502\u001b[39m     kwargs[\u001b[33m'\u001b[39m\u001b[33mlocal_ns\u001b[39m\u001b[33m'\u001b[39m] = \u001b[38;5;28mself\u001b[39m.get_local_scope(stack_depth)\n\u001b[32m   2503\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m.builtin_trap:\n\u001b[32m-> \u001b[39m\u001b[32m2504\u001b[39m     result = \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2506\u001b[39m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[32m   2507\u001b[39m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[32m   2508\u001b[39m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[32m   2509\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic.MAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\magics\\extension.py:33\u001b[39m, in \u001b[36mExtensionMagics.load_ext\u001b[39m\u001b[34m(self, module_str)\u001b[39m\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m module_str:\n\u001b[32m     32\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m UsageError(\u001b[33m'\u001b[39m\u001b[33mMissing module name.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m res = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mshell\u001b[49m\u001b[43m.\u001b[49m\u001b[43mextension_manager\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_extension\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodule_str\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m res == \u001b[33m'\u001b[39m\u001b[33malready loaded\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m     36\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThe \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m extension is already loaded. To reload it, use:\u001b[39m\u001b[33m\"\u001b[39m % module_str)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\extensions.py:62\u001b[39m, in \u001b[36mExtensionManager.load_extension\u001b[39m\u001b[34m(self, module_str)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Load an IPython extension by its module name.\u001b[39;00m\n\u001b[32m     56\u001b[39m \n\u001b[32m     57\u001b[39m \u001b[33;03mReturns the string \"already loaded\" if the extension is already loaded,\u001b[39;00m\n\u001b[32m     58\u001b[39m \u001b[33;03m\"no load function\" if the module doesn't have a load_ipython_extension\u001b[39;00m\n\u001b[32m     59\u001b[39m \u001b[33;03mfunction, or None if it succeeded.\u001b[39;00m\n\u001b[32m     60\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_load_extension\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodule_str\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m:\n\u001b[32m     64\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m module_str \u001b[38;5;129;01min\u001b[39;00m BUILTINS_EXTS:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\extensions.py:79\u001b[39m, in \u001b[36mExtensionManager._load_extension\u001b[39m\u001b[34m(self, module_str)\u001b[39m\n\u001b[32m     77\u001b[39m     mod = import_module(module_str)\n\u001b[32m     78\u001b[39m mod = sys.modules[module_str]\n\u001b[32m---> \u001b[39m\u001b[32m79\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_load_ipython_extension\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmod\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m     80\u001b[39m     \u001b[38;5;28mself\u001b[39m.loaded.add(module_str)\n\u001b[32m     81\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\extensions.py:129\u001b[39m, in \u001b[36mExtensionManager._call_load_ipython_extension\u001b[39m\u001b[34m(self, mod)\u001b[39m\n\u001b[32m    127\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_call_load_ipython_extension\u001b[39m(\u001b[38;5;28mself\u001b[39m, mod):\n\u001b[32m    128\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(mod, \u001b[33m'\u001b[39m\u001b[33mload_ipython_extension\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m129\u001b[39m         \u001b[43mmod\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_ipython_extension\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mshell\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    130\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Student189\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\memory_profiler.py:1160\u001b[39m, in \u001b[36mload_ipython_extension\u001b[39m\u001b[34m(ip)\u001b[39m\n\u001b[32m   1157\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_ipython_extension\u001b[39m(ip):\n\u001b[32m   1158\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"This is called to load the module as an IPython extension.\"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1160\u001b[39m     \u001b[43mMemoryProfilerMagics\u001b[49m\u001b[43m.\u001b[49m\u001b[43mregister_magics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mip\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Student189\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\memory_profiler.py:1134\u001b[39m, in \u001b[36mMemoryProfilerMagics.register_magics\u001b[39m\u001b[34m(cls, ip)\u001b[39m\n\u001b[32m   1132\u001b[39m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[32m   1133\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mregister_magics\u001b[39m(\u001b[38;5;28mcls\u001b[39m, ip):\n\u001b[32m-> \u001b[39m\u001b[32m1134\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdistutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mversion\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LooseVersion\n\u001b[32m   1135\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\n\u001b[32m   1136\u001b[39m     ipython_version = LooseVersion(IPython.__version__)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'distutils'"
+     ]
+    }
+   ],
    "source": [
-    "# !python -m pip install numpy scipy matplotlib memory_profiler setuptools\n",
+    "!python -m pip install numpy scipy matplotlib memory_profiler setuptools\n",
     "\n",
     "import main\n",
     "\n",
@@ -106,6 +155,21 @@
     "$$  \n",
     "\n",
     "> **Wskazówka:** Do definicji macierzy $\\mathbf{A}$ można użyć funkcji [`np.vander()`](https://numpy.org/doc/stable/reference/generated/numpy.vander.html) z odpowiednio dobranymi parametrami."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spare_matrix_Abt(m: int, n: int) -> tuple[np.ndarray, np.ndarray] | None:\n",
+    "    if not isinstance(m, int) or not isinstance(n, int) or m <= 0 or n <= 0:\n",
+    "        return None \n",
+    "    t=np.linspace(0, 1, m)\n",
+    "    b = np.cos(4 * t)\n",
+    "    A=np.vander(t, N=n, increasing=True)\n",
+    "    return A, b"
    ]
   },
   {
@@ -169,11 +233,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Rozwiazanie korzystając z solve:\n",
+      " [ 9.99999973e-01  7.87436649e-06 -8.00029484e+00  4.32313845e-03\n",
+      "  1.06337679e+01  1.47582860e-01 -6.10578772e+00  7.66441836e-01\n",
+      "  6.97307038e-01  7.40518287e-01 -6.80965844e-01  1.43455873e-01]\n",
+      "\n",
+      "Rozwiazanie korzystając z lstsq:\n",
+      " [ 1.00000000e+00 -4.22743385e-07 -7.99998124e+00 -3.18763318e-04\n",
+      "  1.06694308e+01 -1.38202899e-02 -5.64707562e+00 -7.53160319e-02\n",
+      "  1.69360697e+00  6.03210332e-03 -3.74241701e-01  8.80405757e-02]\n",
+      "\n",
+      "Rozwiazanie korzystając z QR:\n",
+      " [ 1.00000000e+00 -4.22743351e-07 -7.99998124e+00 -3.18763306e-04\n",
+      "  1.06694308e+01 -1.38202896e-02 -5.64707562e+00 -7.53160303e-02\n",
+      "  1.69360697e+00  6.03210458e-03 -3.74241702e-01  8.80405758e-02]\n",
+      "\n",
+      "Rozwiazanie korzystając z SVD:\n",
+      " [ 9.99999985e-01  4.76837158e-06 -8.00018311e+00  2.92968750e-03\n",
+      "  1.06484375e+01  7.81250000e-02 -6.00000000e+00  4.37500000e-01\n",
+      "  1.06250000e+00  3.75000000e-01 -5.62500000e-01  1.21093750e-01]\n"
+     ]
+    }
+   ],
    "source": [
-    "# ===== Twoja implementacja tutaj =====\n"
+    "# ===== Twoja implementacja tutaj =====\n",
+    "from scipy.linalg import solve_triangular\n",
+    "[A,b]=spare_matrix_Abt(50,12)\n",
+    "def square_from_rectan(\n",
+    "    A: np.ndarray, b: np.ndarray\n",
+    ") -> tuple[np.ndarray, np.ndarray] | None:\n",
+    "    if not isinstance(A, np.ndarray) or not isinstance(b, np.ndarray):\n",
+    "        return None\n",
+    "    if A.shape[0] != b.shape[0]:\n",
+    "        return None\n",
+    "    A_new = A.T @ A\n",
+    "    b_new = A.T @ b\n",
+    "    return A_new, b_new\n",
+    "[A_new, b_new]=square_from_rectan(A,b)\n",
+    "x=np.linalg.solve(A_new,b_new)\n",
+    "\n",
+    "print(\"\\nRozwiazanie korzystając z solve:\\n\",x)\n",
+    "\n",
+    "x_sq=np.linalg.lstsq(A,b,rcond=None)[0]\n",
+    "print(\"\\nRozwiazanie korzystając z lstsq:\\n\",x_sq)\n",
+    "\n",
+    "A1=np.linalg.qr(A,mode='complete')\n",
+    "x_qr=sp.linalg.solve_triangular(A1[1][:A.shape[1],:],A1[0].T[:A.shape[1],:]@b)\n",
+    "print(\"\\nRozwiazanie korzystając z QR:\\n\",x_qr)\n",
+    "\n",
+    "U, S, Vt = np.linalg.svd(A_new)\n",
+    "S_inv = np.diag(1 / S)\n",
+    "x_svd = Vt.T @ S_inv @ U.T @ b_new\n",
+    "print(\"\\nRozwiazanie korzystając z SVD:\\n\",x_svd)\n",
+    "\n"
    ]
   },
   {
@@ -411,9 +531,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uv: MN-AiR-25-26",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mn-air-25-26"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -426,11 +546,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "37ba08be7ddb7609497e07d672787808fce29369e8f34019d5cbd0288d911be9"
-   }
   }
  },
  "nbformat": 4,
